# chainsig-script

./: .env-sample  .gitignore  README.md  package.json  tsconfig.json
near_contracts/: Cargo.toml  README.md
near_contracts/src/: lib.rs
src/: app.ts  bitcoin.ts  chains.ts  cosmos-ethermint.ts  cosmos-utils.ts  cosmos.ts  dogecoin.ts  ethereum.ts  kdf.ts  near.ts  ripple.ts  utils.ts  xrpLedger.ts
